# hestia

./: .air.toml  .gitignore  .releaserc.json  AGENTS.md  ARCHITECTURE.md  BUILD.bazel  CHANGELOG.md  LICENSE.md  MIGRATION.md  Makefile  README.md  REPO-MIGRATION.md  anansi.json  go.mod  go.sum  hestia.go  hestia.json  schemas.lock.json  testplan.md
app/core/: auth.go  (+17 more)
client/: .sync-package.ts  README.md  container.ts  dist.package.json  index.ts  package-lock.json  package.json  test-setup.ts  tsdown.config.ts  vitest.config.ts
core/: hestia.go
docs/: getting-started.md  index.md  package.json
migrations/: 019f60e4-eaf4-71b3-b94b-8e909b11a8ff__api_key__major.go  019f60e4-eaf4-72f7-bf13-9a98e3831764__access_log__major.go  019f60e4-eaf4-739e-b796-5a3f84ec2a82__token_blocklist__major.go  019f60e4-eaf4-7422-9fbe-e671d38e62d7__seed__major.go  019f60e4-eaf4-74b3-b1f1-c98bad00dbbd__policy_operation__major.go  019f60e4-eaf4-7555-8355-7ce436acf5e8__policy_rule__major.go  019f60e4-eaf4-75dd-99dd-3d97c4a71d9c__user__major.go  019f6640-8f99-7a42-8e86-6e24c5d93d8a__api_key__major.go  019f6640-8f99-7f1f-992b-00fc578a2ce1__token_blocklist__major.go  019f6640-8f9a-7077-abea-89dd860a22f7__seed__major.go  019f6640-8f9a-7150-b266-6e2102f78cc4__operation_policy__major.go  019f6640-8f9a-7150-b266-6e2102f78cc4__policy_operation__major.go  019f6640-8f9a-71fd-bb58-29c411898033__iam_rule__major.go  019f6640-8f9a-71fd-bb58-29c411898033__policy_rule__major.go  019f6642-12d1-7a61-832f-bac77b80eea5__audit_log__major.go  019f6b69-2f4c-7697-bfa6-7ad095f822af__api_key__major.go  registry.go  (+3 more)
(+380 files in other folders)
